MDEV-4995: mariadb_dyncol_column_count returns error when passing an empty dynamic column

An empty string processing added to mariadb_dyncol_column_count().